--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "react-syntax-highlighter": "^10.1.2",
     "react-transition-group": "^2.5.2",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
